// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should generate user deps module with absolute paths 1`] = `
"// This file is automatically generated by Cosmos. Add it to .gitignore and
// only edit if you know what you're doing.

// Keeping global imports here is superior to making them bundle entry points
// because this way they become hot-reloadable.
import '/Users/ovidiu/cosmos/src/polyfills.ts';
import '/Users/ovidiu/cosmos/src/global.css';

export const rendererConfig = {
  "playgroundUrl": "http://localhost:5002"
};

export const fixtures = {
  'src/Counter/Counter.fixture.tsx': { getModule: () => import('/Users/ovidiu/cosmos/src/Counter/Counter.fixture.tsx') },
  'src/CounterButton/CounterButton.fixture.tsx': { getModule: () => import('/Users/ovidiu/cosmos/src/CounterButton/CounterButton.fixture.tsx') }
};

export const decorators = {
  'src/cosmos.decorator.tsx': { getModule: () => import('/Users/ovidiu/cosmos/src/cosmos.decorator.tsx') }
};
"
`;

exports[`should generate user deps module with relative paths 1`] = `
"// This file is automatically generated by Cosmos. Add it to .gitignore and
// only edit if you know what you're doing.

// Keeping global imports here is superior to making them bundle entry points
// because this way they become hot-reloadable.
import './polyfills.ts';
import './global.css';

export const rendererConfig = {
  "playgroundUrl": "http://localhost:5002"
};

export const fixtures = {
  'src/Counter/Counter.fixture.tsx': { getModule: () => import('./Counter/Counter.fixture.tsx') },
  'src/CounterButton/CounterButton.fixture.tsx': { getModule: () => import('./CounterButton/CounterButton.fixture.tsx') }
};

export const decorators = {
  'src/cosmos.decorator.tsx': { getModule: () => import('./cosmos.decorator.tsx') }
};
"
`;
